feat: add some java docs and null checks